# DuAnTauHoa

./: README.md
KLN_Train_/: HUONG_DAN_CHAY_RUST_SERVICES.docx  package-lock.json  package.json
KLN_Train_/.claude/: settings.json
KLN_Train_/KLN_BE/api-gateway/: .env  package.json
KLN_Train_/KLN_BE/api-gateway/config/: routeTable.js  targets.js
KLN_Train_/KLN_BE/services/auth-service/: .env  app.js
KLN_Train_/KLN_BE/services/booking-service/: .env  package.json
KLN_Train_/KLN_BE/services/customer-service/: .env  .env.example  app.js  package.json
KLN_Train_/KLN_BE/services/customer-service-rust/: .env.example  Cargo.toml
KLN_Train_/KLN_BE/services/customer-service-rust/src/: db.rs  handlers.rs  main.rs  middleware.rs  models.rs  response.rs
KLN_Train_/KLN_BE/services/dashboard-rust/: .env  Cargo.toml
KLN_Train_/KLN_BE/services/dashboard-rust/src/: db.rs  handlers.rs  main.rs
KLN_Train_/KLN_BE/services/notification-service/: .env  .env.example  app.js  package.json
KLN_Train_/KLN_BE/services/payment-service/: .env  .env.example  app.js  package.json
KLN_Train_/KLN_BE/services/railway-service/: .env  .env.example  package.json
KLN_Train_/KLN_BE/shared/: authMiddleware.js  db.js  internalAuth.js  package.json  serviceClient.js
KLN_Train_/KLN_FR/FR_Admin/: .env  README.md  package-lock.json  package.json
KLN_Train_/KLN_FR/FR_Dispatcher/: README.md  TaiLieu_HeDieuPhoi.md  index.html  package-lock.json  package.json
KLN_Train_/KLN_FR/FR_User/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+231 files in other folders)
